[package]
name = "rust-music-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
hyper = "0.14.19"
hyper-tls = "0.5.0"
envy = "0.4"
dotenv = "0.15"
serenity = { version = "0.10.9", default-features = false, features = [
	"builder",
	"cache",
	"client",
	"framework",
	"gateway",
	"model",
	"http",
	"standard_framework",
	"utils",
	"rustls_backend",
	"voice",
] }
songbird = "0.2.2"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
anyhow = "1.0.57"
chrono = "0.4.19"
librespot = {version = "0.3.1", default-features = false}
tracing = "0.1.0"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
futures = "0.3.14"
byteorder = "1.4.3"
rubato = "0.10.0"

[profile.dev]
split-debuginfo = "unpacked"
